--- a/index.html
+++ b/index.html
@@ -195,12 +195,22 @@
   transform: scale(0.96);
   filter: brightness(0.9);
 }
+
+@keyframes loadProgress {
+  0% { width: 0%; }
+  100% { width: 100%; }
+}
 </style>
 </head>
 <body>
 <div class="loading-screen" id="loading">
-<img alt="Loading..." src="w1.png"/>
-<span>Приключение 2025</span>
+<img alt="Loading..." src="w1.png" style="position:absolute; width:100%; height:100%; object-fit:cover; z-index:-1;"/>
+<div style="font-family: 'Comic Sans MS', cursive, sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 20px;">
+        Приключение года 2025
+      </div>
+<div style="width: 80%; height: 12px; background: #ccc; border-radius: 6px; overflow: hidden;">
+<div id="progress-bar" style="width: 0%; height: 100%; background: linear-gradient(90deg, #00c6ff, #0072ff); animation: loadProgress 5s linear forwards;"></div>
+</div>
 </div>
 <div class="game-container" id="gameContainer" style="display:none">
 <div class="balance" id="tokenCount">0 токенов</div>
